deployments/manifests/fe-pub-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-public
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erdc-poc
  namespace: frontend-public
  labels:
    app: erdc-poc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: erdc-poc
  template:
    metadata:
      labels:
        app: erdc-poc
    spec:
      containers:
      - name: erdc-poc
        image: acrtipstg001.azurecr.io/erdc-fe-pub:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: erdc-poc-svc
  namespace: frontend-public
  labels:
    app: erdc-poc
spec:
  selector:
    app: erdc-poc
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
